add style to body and mamain

--- a/scss/global/_colors.scss
+++ b/scss/global/_colors.scss
@@ -2,5 +2,6 @@
   --color-green: hsl(75, 94%, 57%);
   --color-grey: hsl(0, 0%, 20%);
   --color-darkGrey: hsl(0, 0%, 12%);
-  --color--offBlack: hsl(0, 0%, 8%);
+  --color-offBlack: hsl(0, 0%, 8%);
+  --color-white: hsl(0, 0%, 100%);
 }
