--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -2,6 +2,7 @@ body {
   background-color: var(--color-offBlack);
   display: flex;
   min-height: 100vh;
+  line-height: 1.5;
   justify-content: center;
   align-items: center;
   color: var(--color-white);
@@ -19,14 +20,24 @@ main {
 
 }
 
-
+.location {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.25rem;
+  align-self: stretch;
+}
 
 .location__title {
   color: var(--color-white);
+  font-weight: 600;
+  font-size: 1.5rem;
 }
 
 .location__description {
   color: var(--color-green);
+  font-weight: 700;
+  font-size: 0.875rem
 }
 
 a {
