--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -40,6 +40,12 @@ main {
   font-size: 0.875rem
 }
 
+.bio__message {
+  text-align: center;
+  font-size: 0.875rem;
+  font-weight: 400;
+}
+
 a {
   color: var(--color-white)
 }
