--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -46,6 +46,35 @@ main {
   font-weight: 400;
 }
 
+.links {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-self: stretch;
+  gap: 1rem;
+}
+
+.item {
+  background-color: var(--color-grey);
+  border-radius: 0.5rem;
+  display: flex;
+  padding: 0.75rem;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+  align-self: stretch;
+}
+
+.item:hover {
+  background-color: var(--color-green);
+}
+
 a {
-  color: var(--color-white)
+  color: var(--color-white);
+  font-size: 0.875rem;
+  font-weight: 700;
+}
+
+a:hover {
+  color: var(--color-grey);
 }
