--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -1,3 +1,5 @@
+@use "../global/layout" as v;
+
 body {
   background-color: var(--color-offBlack);
   display: flex;
@@ -17,6 +19,11 @@ main {
   gap: 1.5rem;
   padding: 2.5rem;
   flex-shrink: 0;
+
+  @include v.mobile {
+    width: 20.4375rem;
+    padding: 1.5rem;
+  }
 
 }
 
