--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -24,7 +24,6 @@ main {
     width: 20.4375rem;
     padding: 1.5rem;
   }
-
 }
 
 .location {
@@ -39,12 +38,14 @@ main {
   color: var(--color-white);
   font-weight: 600;
   font-size: 1.5rem;
+  text-align: center;
 }
 
 .location__description {
   color: var(--color-green);
   font-weight: 700;
-  font-size: 0.875rem
+  font-size: 0.875rem;
+  text-align: center;
 }
 
 .bio__message {
